# dragoon

./: .gitattributes  .gitignore  Dragoon.sln  Main.tscn  icon.svg.import  player.tscn  project.godot  rust.gdextension  rust.gdextension.uid
art/StylizedDragonPack/Meshes/: Dragon.fbx.import  DragonWhelp.fbx.import  Drake.fbx.import  ElderDragon.fbx.import
art/StylizedDragonPack/Textures/Dragon/: T_Dragon_AO.tga.import  T_Dragon_E.tga.import  T_Dragon_Gn_D.tga.import  T_Dragon_Go_D.tga.import  T_Dragon_MR.tga.import  T_Dragon_N.tga.import  T_Dragon_Pe_D.tga.import  T_Dragon_Rd_D.tga.import
art/StylizedDragonPack/Textures/DragonWhelp/: T_DragonWhelp_AO.tga.import  T_DragonWhelp_E.tga.import  T_DragonWhelp_Gn_D.tga.import  T_DragonWhelp_Go_D.tga.import  T_DragonWhelp_MR.tga.import  T_DragonWhelp_N.tga.import  T_DragonWhelp_Pe_D.tga.import  T_DragonWhelp_Rd_D.tga.import
art/StylizedDragonPack/Textures/Drake/: T_Drake_AO.tga.import  T_Drake_E.tga.import  T_Drake_Gn_D.tga.import  T_Drake_Go_D.tga.import  T_Drake_MR.tga.import  T_Drake_N.tga.import  T_Drake_Pe_D.tga.import  T_Drake_Rd_D.tga.import
enemies/: EnemyAiConfig.cs  EnemyAiConfig.cs.uid  EnemyStats.cs  EnemyStats.cs.uid  ai_dragon.tres  mat_dragon.tres  model_dragon.tscn  stats_dragon.tres
rust/: Cargo.toml
rust/src/: lib.rs  prelude.rs
rust/src/dragon/: ai.rs  ai_config.rs  animation.rs  bundles.rs  components.rs  mod.rs  spawn.rs  stats.rs
rust/src/player/: bundles.rs  components.rs  events.rs  input.rs  jump_charge.rs  mod.rs  movement.rs  systems.rs  visuals.rs
(+16 files in other folders)
