[package]
name = "dragoon_plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
avian3d = "0.5"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_state",
  "bevy_log",
  "multi_threaded",
] }
bevy_asset_loader = "0.25"
godot = "0.4"
godot-bevy = "0.11"

[workspace]